# flask_tutorial

./: cleanup_cache.py  pyproject.toml
flaskr/: __init__.py  auth.py  blog.py  hello.py  look_hooks.py  schema.sql
flaskr/static/: pygments.css  style.css
flaskr/templates/: base.html
flaskr/templates/blog/: create.html  detail.html  feed.xml  index.html  update.html
tests/: test_factory.py
